welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: type mismatch;
 found   : Int
 required: Boolean
  if (getX()){
          ^ZigZag:5: error: type mismatch;
 found   : Int(1)
 required: Boolean
    1
    ^ZigZag:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (getX()){
  ^