welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
}

def test:Boolean={
  if (getX()){
    1
  }
}